running the model on the kaggle dataset!

--- a/scripts/s0_dataset_exploration/dataset_exploration.ipynb
+++ b/scripts/s0_dataset_exploration/dataset_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,12 @@
     "sys.path.append(\"../../scripts\")\n",
     "\n",
     "# import data filepath we want to use\n",
-    "from data_filepaths import all_data_info"
+    "from data_filepaths import all_data_info, portraits_csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,14 +52,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artist</th>\n",
+       "      <th>date</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>pixelsx</th>\n",
+       "      <th>pixelsy</th>\n",
+       "      <th>size_bytes</th>\n",
+       "      <th>source</th>\n",
+       "      <th>style</th>\n",
+       "      <th>title</th>\n",
+       "      <th>artist_group</th>\n",
+       "      <th>in_train</th>\n",
+       "      <th>new_filename</th>\n",
+       "      <th>correcteddate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Barnett Newman</td>\n",
+       "      <td>1955.0</td>\n",
+       "      <td>abstract</td>\n",
+       "      <td>15530.0</td>\n",
+       "      <td>6911.0</td>\n",
+       "      <td>9201912.0</td>\n",
+       "      <td>wikiart</td>\n",
+       "      <td>Color Field Painting</td>\n",
+       "      <td>Uriel</td>\n",
+       "      <td>train_only</td>\n",
+       "      <td>True</td>\n",
+       "      <td>102257.jpg</td>\n",
+       "      <td>1955.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Barnett Newman</td>\n",
+       "      <td>1950.0</td>\n",
+       "      <td>abstract</td>\n",
+       "      <td>14559.0</td>\n",
+       "      <td>6866.0</td>\n",
+       "      <td>8867532.0</td>\n",
+       "      <td>wikiart</td>\n",
+       "      <td>Color Field Painting</td>\n",
+       "      <td>Vir Heroicus Sublimis</td>\n",
+       "      <td>train_only</td>\n",
+       "      <td>True</td>\n",
+       "      <td>75232.jpg</td>\n",
+       "      <td>1950.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>kiri nichol</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9003.0</td>\n",
+       "      <td>9004.0</td>\n",
+       "      <td>1756681.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Neoplasticism</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>test_only</td>\n",
+       "      <td>False</td>\n",
+       "      <td>32145.jpg</td>\n",
+       "      <td>2013.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>kiri nichol</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9003.0</td>\n",
+       "      <td>9004.0</td>\n",
+       "      <td>1942046.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Neoplasticism</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>test_only</td>\n",
+       "      <td>False</td>\n",
+       "      <td>20304.jpg</td>\n",
+       "      <td>2013.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>kiri nichol</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9003.0</td>\n",
+       "      <td>9004.0</td>\n",
+       "      <td>1526212.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Neoplasticism</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>test_only</td>\n",
+       "      <td>False</td>\n",
+       "      <td>836.jpg</td>\n",
+       "      <td>2013.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           artist    date     genre  pixelsx  pixelsy  size_bytes   source  \\\n",
+       "0  Barnett Newman  1955.0  abstract  15530.0   6911.0   9201912.0  wikiart   \n",
+       "1  Barnett Newman  1950.0  abstract  14559.0   6866.0   8867532.0  wikiart   \n",
+       "2     kiri nichol  2013.0       NaN   9003.0   9004.0   1756681.0      NaN   \n",
+       "3     kiri nichol  2013.0       NaN   9003.0   9004.0   1942046.0      NaN   \n",
+       "4     kiri nichol  2013.0       NaN   9003.0   9004.0   1526212.0      NaN   \n",
+       "\n",
+       "                  style                  title artist_group  in_train  \\\n",
+       "0  Color Field Painting                  Uriel   train_only      True   \n",
+       "1  Color Field Painting  Vir Heroicus Sublimis   train_only      True   \n",
+       "2         Neoplasticism                    NaN    test_only     False   \n",
+       "3         Neoplasticism                    NaN    test_only     False   \n",
+       "4         Neoplasticism                    NaN    test_only     False   \n",
+       "\n",
+       "  new_filename  correcteddate  \n",
+       "0   102257.jpg         1955.0  \n",
+       "1    75232.jpg         1950.0  \n",
+       "2    32145.jpg         2013.0  \n",
+       "3    20304.jpg         2013.0  \n",
+       "4      836.jpg         2013.0  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +219,7 @@
        "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +281,7 @@
        "Name: genre, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +303,7 @@
        "3134"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +323,7 @@
        "16847"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +344,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -216,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1221,7 @@
        "61854       True    59924.jpg         1778.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1250,7 @@
        "(16847, 13)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1119,7 +1270,7 @@
        "1020"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,10 +1290,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "portraits.to_csv(portraits_csv)"
+   ]
   },
   {
    "cell_type": "code",
